--- a/views/index.html
+++ b/views/index.html
@@ -54,7 +54,7 @@
         <nav class="main-header__nav">
             <ul class="main-header__item-list">
                 <li class="main-header__items"><a class =" active"  href="/">Home</a></li>
-                <li class="main-header__items"><a class =" active"  href="/add-product">Products</a></li>
+                <li class="main-header__items"><a href="/add-product">Products</a></li>
             </ul>
         </nav>
     </header>
