--- a/views/product.html
+++ b/views/product.html
@@ -47,19 +47,58 @@
     .main-header__items a:active{
         color: rgb(4, 2, 26);
     }
+    .product-form{
+        width: 20rem;
+        max-width: 90%;
+        margin: auto;
+    }
+    .form-control{
+        margin: 1rem 0;
+        width: 100%;
+        margin: auto;
+    }
+    .form-control label,
+    .form-control input
+    {
+        display: block;
+        width: 100%;
+    }
+    .form-control input{
+        border: 1px solid rgb(14, 5, 46);
+        font: inherit;
+        border-radius: 2px;
+    }
+    button{
+        font: inherit;
+        border: 1px solid rgb(27, 1, 34);
+        background: rgb(90, 6, 168);
+        border-radius: 3px;
+        color: cornsilk;
+        cursor: pointer;
+    }
+    button:hover,
+    button:active{
+        background-color: grey;
+        color: black;
+    }
 </style>
 <body>
     <header class="main-header">
         <nav class="main-header__nav">
             <ul class="main-header__item-list">
-                <li class="main-header__items"><a class =" active" href="/">Home</a></li>
+                <li class="main-header__items"><a href="/">Home</a></li>
                 <li class="main-header__items"><a class =" active" href="/add-product">Products</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <form action="/add-product" method="POST"> 
-            <input type="text" name="prod" id="pd">
+        <form class = "product-form" action="/add-product" method="POST"> 
+            <div class = "form-control">
+                <label for="title">Title</label>
+                <input type="text" name="prod" id="title">
+            </div>
+            
+            
             <button type="submit">Add</button>
         </form>
     </main>
